--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 0MQ version 3.2.6 stable, released on 2015/xx/xx
 ================================================
 
+* LIBZMQ-949 zmq_unbind fails for inproc and wildcard endpoints
+
 
 0MQ version 3.2.5 stable, released on 2014/10/14
 ================================================
