--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,10 @@
-0MQ version 4.1.3 stable, released on 2015/xx/xx
+0MQ version 4.1.3 stable, released on 2015/08/17
 ================================================
 
-* Fixed #52 - getsockopt ZMQ_RCVMORE now resets all bits instead of only 32
+* Fixed #1532 - getsockopt ZMQ_RCVMORE now resets all bits instead of only 32
 
-* Fixed validation of IPv6 addresses with brackets
+* Fixed #1445 - zmq::socket_base_t::connect fails on tcp ipv6 address
+
 
 0MQ version 4.1.2 stable, released on 2015/06/15
 ================================================
