--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+0MQ version 4.1.4 stable, released on 2015/xx/xx
+================================================
+
+
 0MQ version 4.1.3 stable, released on 2015/08/17
 ================================================
 
