Problem: duplicate code for hwm check

--- a/AUTHORS
+++ b/AUTHORS
@@ -35,6 +35,7 @@ Christian Gudrian
 Christian Kamm 
 Chuck Remes 
 Conrad D. Steenberg 
+Constantin Rack
 Dhammika Pathirana 
 Dhruva Krishnamurthy 
 Dirk O. Kaar 
