--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 0MQ version 4.1.4 stable, released on 2015/xx/xx
 ================================================
 
+* Fixed #1399 - assertion failure in tcp.cpp after network reconnect.
+
 
 0MQ version 4.1.3 stable, released on 2015/08/17
 ================================================
