--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,8 @@
 
 * Fixed #1399 - assertion failure in tcp.cpp after network reconnect.
 
+* Fixed #1632 - build failure using latest libsodium.
+
 
 0MQ version 4.1.3 stable, released on 2015/08/17
 ================================================
