--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-0MQ version 4.1.4 stable, released on 2015/xx/xx
+0MQ version 4.1.4 stable, released on 2015/12/18
 ================================================
 
 * Fixed #1315 - socket monitor hangs if bind/setsockopt failed.
