--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+0MQ version 4.1.5 stable, released on 2016/xx/xx
+================================================
+
+
 0MQ version 4.1.4 stable, released on 2015/12/18
 ================================================
 
