--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 0MQ version 4.1.5 stable, released on 2016/xx/xx
 ================================================
 
+* Fixed #1673 - CMake on Windows put PDB in wrong directory.
+
 
 0MQ version 4.1.4 stable, released on 2015/12/18
 ================================================
