--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@
 
 * Fixed #1673 - CMake on Windows put PDB in wrong directory.
 
+* Fixed #1723 - Family is not set when resolving NIC on android.
 
 0MQ version 4.1.4 stable, released on 2015/12/18
 ================================================
