Problem: tweetnacl sources are a mess
- they have no copyright / license statement
- they are in some randomish directory structure
- they are a mix of postable and non-portable files
- they do not conform to conditional compile environment

Overall, it makes it rather more work than needed, in build scripts.

Solution: clean up tweetnacl sauce.

- merged code into single tweetnacl.c and .h
- standard copyright header, DJB to AUTHORS
- moved into src/ along with all other source files
- all system and conditional compilation hidden in these files
- thus, they can be compiled and packaged in all cases
- ZMQ_USE_TWEETNACL is set when we're using built-in tweetnacl
- HAVE_LIBSODIUM is set when we're using external libsodium

--- a/AUTHORS
+++ b/AUTHORS
@@ -12,7 +12,7 @@ Copyright (c) 2014 AppDynamics Inc.
 Individual Contributors
 =======================
 
-AJ Lewis 
+AJ Lewis
 Alexej Lotz 
 Andrew Thompson 
 Asko Kauppi 
@@ -36,10 +36,11 @@ Christian Kamm
 Chuck Remes 
 Conrad D. Steenberg 
 Constantin Rack
-Dhammika Pathirana 
+Daniel J. Bernstein
+Dhammika Pathirana
 Dhruva Krishnamurthy 
 Dirk O. Kaar 
-Douglas Creager 
+Douglas Creager
 Drew Crawford 
 Erich Heine 
 Erik Hugne 
