--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,10 @@
 
 * Fixed LIBZMQ-949 - zmq_unbind fails for inproc and wildcard endpoints
 
+* Fixed #1806 - uninitialised read in curve getsockopt.
+
+* Fixed #1807 - build broken with GCC 6.
+
 
 0MQ version 4.0.7 stable, released on 2015/06/15
 ================================================
