Problem: my name is not in the AUTHORS file
Solution: add myself to the list

--- a/AUTHORS
+++ b/AUTHORS
@@ -53,6 +53,7 @@ Joe Thornber <joe.thornber@gmail.com>
 Jon Dyte <jon@totient.co.uk>
 Kamil Shakirov <kamils80@gmail.com>
 Ken Steele <ken@tilera.com>
+Luca Boccassi <luca.boccassi@gmail.com>
 Marc Rossi <mrossi19@gmail.com>
 Martin Hurton <hurtonm@gmail.com>
 Martin Lucina <martin@lucina.net>
