--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,8 @@
 
 * Fixed #1807 - build broken with GCC 6.
 
+* Fixed #1877 - Avoid terminating connections prematurely
+
 
 0MQ version 4.0.7 stable, released on 2015/06/15
 ================================================
