Update NEWS for fix #1887

--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,8 @@
 
 * Fixed #1877 - Avoid terminating connections prematurely
 
+* Fixed #1887 - zmq_bind IPv4 fallback still tries IPv6
+
 
 0MQ version 4.0.7 stable, released on 2015/06/15
 ================================================
