Problem: No NEWS entry for Issue #919
Solution: add entry and mark it as related to Issue #1877 and PR #1511

--- a/NEWS
+++ b/NEWS
@@ -21,6 +21,7 @@
 
 * Fixed #1866 - fails to build on SunOS 5.10 / Solaris 10
 
+* Fixed #919 - ZMQ_LINGER (related to #1877)
 
 0MQ version 4.1.4 stable, released on 2015/12/18
 ================================================
