--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,8 @@
 
 * Fixed #98 - don't require libssp without libsodium on Solaris
 
+* Fixed #919 - ZMQ_LINGER (related to #1877)
+
 
 0MQ version 4.0.7 stable, released on 2015/06/15
 ================================================
