--- a/NEWS
+++ b/NEWS
@@ -27,6 +27,8 @@
 
 * Fixed #1952 - CMake scripts not part of release tarballs
 
+* Fixed #1542 - Fix a crash on Windows when port 5905 is in use.
+
 
 0MQ version 4.1.4 stable, released on 2015/12/18
 ================================================
