--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-0MQ version 4.0.8 stable, released on 2015/07/xx
+0MQ version 4.0.8 stable, released on 2016/06/17
 ================================================
 
 * Fixed LIBZMQ-949 - zmq_unbind fails for inproc and wildcard endpoints
