--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+0MQ version 4.0.9 stable, released on 2016/xx/xx
+================================================
+
+
 0MQ version 4.0.8 stable, released on 2016/06/17
 ================================================
 
