--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,8 @@
 
 * Fixed #2051 - getifaddrs can fail with ECONNREFUSED
 
+* Fixed #2091 - testutil.hpp fails to build on Windows XP
+
 
 0MQ version 4.1.5 stable, released on 2016/06/17
 ================================================
