Update NEWS for #2107

--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,8 @@
 
 * Fixed #2096 - add tests/CMakeLists.in and version.rc.in to dist tar
 
+* Fixed #2107 - zmq_connect with IPv6 "source:port;dest:port" broken
+
 
 0MQ version 4.1.5 stable, released on 2016/06/17
 ================================================
