--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+0MQ version 4.2.0 rc1, released on 2016/11/01
+=============================================
+
+* Many changes, see ChangeLog.
+
+
 0MQ version 4.1.0 rc1, released on 2014/10/14
 =============================================
 
