--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+0MQ version 4.1.7 stable, released on 20xx/xx/xx
+================================================
+
+
 0MQ version 4.1.6 stable, released on 2016/11/01
 ================================================
 
