--- a/NEWS
+++ b/NEWS
@@ -4,10 +4,186 @@
 * Many changes, see ChangeLog.
 
 
+0MQ version 4.1.6 stable, released on 2016/11/01
+================================================
+
+* Fixed #2051 - getifaddrs can fail with ECONNREFUSED
+
+* Fixed #2091 - testutil.hpp fails to build on Windows XP
+
+* Fixed #2096 - add tests/CMakeLists.in and version.rc.in to dist tar
+
+* Fixed #2107 - zmq_connect with IPv6 "source:port;dest:port" broken
+
+* Fixed #2117 - ctx_term assert with inproc zmq_router connect-before-bind
+
+* Fixed #2158 - Socket monitor uses internal Pair from multiple threads
+
+* Fixed #2161 - messages dropped due to HWM race
+
+* Fixed #1325 - alignment issue with zmq_msg_t causes SIGBUS on SPARC and ARM
+
+
+0MQ version 4.1.5 stable, released on 2016/06/17
+================================================
+
+* Fixed #1673 - CMake on Windows put PDB in wrong directory.
+
+* Fixed #1723 - Family is not set when resolving NIC on Android.
+
+* Fixed #1608 - Windows 7 TCP slow start issue.
+
+* Fixed #1806 - uninitialised read in curve getsockopt.
+
+* Fixed #1807 - build broken with GCC 6.
+
+* Fixed #1831 - potential assertion failure with latest libsodium.
+
+* Fixed #1850 - detection issues with tweetnacl/libsodium.
+
+* Fixed #1877 - Avoid terminating connections prematurely
+
+* Fixed #1887 - zmq_bind IPv4 fallback still tries IPv6
+
+* Fixed #1866 - fails to build on SunOS 5.10 / Solaris 10
+
+* Fixed #919 - ZMQ_LINGER (related to #1877)
+
+* Fixed #114 - cannot unbind with same endpoint with IPv6 enabled.
+
+* Fixed #1952 - CMake scripts not part of release tarballs
+
+* Fixed #1542 - Fix a crash on Windows when port 5905 is in use.
+
+* Fixed #2021 - Fix building on sparc32.
+
+
+0MQ version 4.1.4 stable, released on 2015/12/18
+================================================
+
+* Fixed #1315 - socket monitor hangs if bind/setsockopt failed.
+
+* Fixed #1399 - assertion failure in tcp.cpp after network reconnect.
+
+* Fixed #1632 - build failure using latest libsodium.
+
+* Fixed #1644 - assertion failure in msg.cpp:390 on STREAM sockets.
+
+* Fixed #1661 - does not handle IPv6 link local addresses.
+
+
+0MQ version 4.1.3 stable, released on 2015/08/17
+================================================
+
+* Fixed #1532 - getsockopt ZMQ_RCVMORE now resets all bits instead of only 32
+
+* Fixed #1445 - zmq::socket_base_t::connect fails on tcp ipv6 address
+
+
+0MQ version 4.1.2 stable, released on 2015/06/15
+================================================
+
+* Added explicit reference to static link exception in every source file.
+
+* Bumped ABI version to 5:0:0 since 4.1.x changed the ABI.
+
+* Fixed STDINT event interface macros to work with CZMQ 3.0.
+
+* Fixed installation of man pages when BUILD_DOC is not set.
+
+* Fixed #1428 - regression on single-socket proxies.
+
+
+0MQ version 4.1.1 stable, released on 2015/06/02
+================================================
+
+* Fixed #1208 - fix recursion in automake packaging.
+
+* Fixed #1224 - crash when processing empty unsubscribe message.
+
+* Fixed #1213 - properties files were missing from source packages.
+
+* Fixed #1273 - V3 protocol handler vulnerable to downgrade attacks.
+
+* Fixed #1347 - lack way to get peer address.
+
+* Fixed #1362 - SUB socket sometimes fails to resubscribe properly.
+
+* Fixed #1377, #1144 - failed with WSANOTINITIALISED in some cases.
+
+* Fixed #1389 - PUB, PUSH sockets had slow memory leak.
+
+* Fixed #1382 - zmq_proxy did not terminate if there were no readers.
+
+
 0MQ version 4.1.0 rc1, released on 2014/10/14
 =============================================
 
-* Many changes, see ChangeLog.
+* All issues that were fixed in 4.0.x
+
+* Improved client reconnection strategy on errors
+
+* GSSAPI security mechanism
+
+* SOCKS5 support (ZMQ_SOCKS_PROXY)
+
+* ZMQ_ROUTER_HANDOVER
+
+* ZMQ_TOS
+
+* ZMQ_CONNECT_RID
+
+* ZMQ_HANDSHAKE_IVL
+
+* ZMQ_IDENTITY_FD
+
+* ZMQ_XPUB_NODROP
+
+* ZMQ_SRCFD and ZMQ_SHARED message options
+
+* Message metadata -- zmq_msg_gets ()
+
+* Probe library configuration -- zmq_has ()
+
+
+0MQ version 4.0.8 stable, released on 2016/06/17
+================================================
+
+* Fixed LIBZMQ-949 - zmq_unbind fails for inproc and wildcard endpoints
+
+* Fixed #1806 - uninitialised read in curve getsockopt.
+
+* Fixed #1807 - build broken with GCC 6.
+
+* Fixed #1877 - Avoid terminating connections prematurely
+
+* Fixed #1887 - zmq_bind IPv4 fallback still tries IPv6
+
+* Fixed #98 - don't require libssp without libsodium on Solaris
+
+* Fixed #919 - ZMQ_LINGER (related to #1877)
+
+* Fixed #139 - "tempnam" is deprecated.
+
+
+0MQ version 4.0.7 stable, released on 2015/06/15
+================================================
+
+* Fixed #1428 - regression on single-socket proxies.
+
+
+0MQ version 4.0.6 stable, released on 2015/06/02
+================================================
+
+* Fixed #1273 - V3 protocol handler vulnerable to downgrade attacks.
+
+* Fixed #1362 - SUB socket sometimes fails to resubscribe properly.
+
+* Fixed #1377, #1144 - failed with WSANOTINITIALISED in some cases.
+
+* Fixed #1389 - PUB, PUSH sockets had slow memory leak.
+
+* Fixed #1382 - zmq_proxy did not terminate if there were no readers.
 
 
 0MQ version 4.0.5 stable, released on 2014/10/14
