Finalize NEWS for 4.2.0

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-0MQ version 4.2.0 stable, released on 2016/11/xx
+0MQ version 4.2.0 stable, released on 2016/11/04
 =============================================
 
 * For Pieter. Thanks for making all of this possible.
