--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+0MQ version 4.2.1 stable, released on 201x/xx/xx
+=============================================
+
+
 0MQ version 4.2.0 stable, released on 2016/11/04
 =============================================
 
