Problem: ZMQ_MSG_T_SIZE draft but not in DRAFT section
Solution: move it there, add it to src/zmq_draft.h and clarify in the
documentation and in the NEWS file that this option is not yet stable

--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
 0MQ version 4.2.1 stable, released on 201x/xx/xx
 =============================================
 
-* New Context options:
+* New DRAFT (see NEWS for 4.2.0) Context options:
   - ZMQ_MSG_T_SIZE
 
 
