--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-0MQ version 4.2.1 stable, released on 201x/xx/xx
+0MQ version 4.2.1 stable, released on 2016/12/31
 =============================================
 
 * New DRAFT (see NEWS for 4.2.0) Socket Monitor events:
