--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+0MQ version 4.2.2 stable, released on 20xx/xx/xx
+=============================================
+
+
 0MQ version 4.2.1 stable, released on 2016/12/31
 =============================================
 
