Problem: 4.2.2 is out, version(s) are out of date
Solution: bump changelog, ABI revision, library and packaging version

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+0MQ version 4.2.3 stable, released on 20xx/xx/xx
+=============================================
+
 0MQ version 4.2.2 stable, released on 2017/02/18
 =============================================
 
