--- a/AUTHORS
+++ b/AUTHORS
@@ -8,6 +8,7 @@ Copyright (c) 2011 VMware, Inc.
 Copyright (c) 2012 Spotify AB
 Copyright (c) 2013 Ericsson AB
 Copyright (c) 2014 AppDynamics Inc.
+Copyright (c) 2015 Google, Inc.
 Copyright (c) 2015-2016 Brocade Communications Systems Inc.
 
 Individual Contributors
