Update AUTHERS File

--- a/AUTHORS
+++ b/AUTHORS
@@ -100,6 +100,7 @@ Peter Bourgon
 Philip Kovacs
 Pieter Hintjens
 Piotr Trojanek
+Reza Ebrahimi
 Richard Newton
 Rik van der Heijden
 Robert G. Jakabosky
