Update NEWS for #164

--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,8 @@
 * Fixed #2623 - ZMQ_ROUTER: with ZMQ_ROUTER_MANDATORY, ZMQ_POLLOUT will now
                 now return true only if at least one pipe is ready for writing
 
+* Fixed #164 - EHOSTDOWN socket error assertion
+
 
 0MQ version 4.1.6 stable, released on 2016/11/01
 ================================================
