Problem: documentation for ZMQ_XPUB_VERBOSE(R) is unclear
Solultion: clarify that notifications for unique subs/unsubs are always
passed, and these option only affect the behaviour for duplicated ones.

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 0MQ version 4.2.4 stable, released on 20xx/xx/xx
 ================================================
 
+* Fixed #2820 - further clarify ZMQ_XPUB_VERBOSE(R) documentation.
+
+
 0MQ version 4.2.3 stable, released on 2017/12/13
 ================================================
 
