--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,9 @@
-0MQ version 4.2.5 stable, released on 20xx/xx/xx
+0MQ version 4.3.1 stable, released on 20xx/xx/xx
 ================================================
+
+* The following DRAFT APIs have been marked as STABLE and will not change
+  anymore:
+  - ZMQ_MSG_T_SIZE context option (see doc/zmq_ctx_get.txt)
 
 
 0MQ version 4.2.4 stable, released on 2018/03/21
