Finalise changelog for 4.2.4

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-0MQ version 4.2.4 stable, released on 20xx/xx/xx
+0MQ version 4.2.4 stable, released on 2018/03/21
 ================================================
 
 * New DRAFT (see NEWS for 4.2.0) socket options:
