--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+0MQ version 4.2.5 stable, released on 20xx/xx/xx
+================================================
+
+
 0MQ version 4.2.4 stable, released on 2018/03/21
 ================================================
 
