--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-0MQ version 4.2.5 stable, released on 20xx/xx/xx
+0MQ version 4.2.5 stable, released on 2018/03/23
 ================================================
 
 * Fixed #3018 - fix backward-incompatible change in the NULL auth
@@ -11,6 +11,7 @@
 
 * Fixed #3012 - fix CMake build problem when using LIBZMQ_WERROR and a
                 compiler other than GCC.
+
 
 0MQ version 4.2.4 stable, released on 2018/03/21
 ================================================
